# color-slicer

./: .gitignore  ColorSlicer.code-workspace  KMeansMeshGen.code-workspace  README.md  angular.json  package-lock.json  pyproject.toml  tsconfig.json
.github/workflows/: deployment.yml
angular/: angular.json  package-lock.json  package.json
angular/src/: index.html
angular/src/app/: app.component.html  app.component.ts  app.config.ts  kmeans.worker.ts
angular/src/app/decorators/: bind.decorator.ts
angular/src/app/models/: CustomError.ts  ImageDisplayInfo.ts  Kmeans.ts  ProgressUpdate.ts  Timer.ts  fileData.ts  fixed-array.ts  pixel.ts  processedImage.ts  vector.ts
angular/src/app/services/: app.service.ts  app.store.service.ts  array.service.ts  (+9 more)
github-pages/: 3rdpartylicenses.txt
github-pages/browser/: chunk-EYWAUNLF.js  chunk-OI6ND6EH.js  index.html  main-WYNXIXGQ.js  styles-JI623Y5S.css  worker-I354BQJW.js
meshgen/: README.md  __init__.py  angular.json  package-lock.json  package.json
meshgen/src/: index.html
meshgen/src/app/: app.component.spec.ts  app.component.ts
python/: .gitignore  kmeans testing.py  package-lock.json
python/meshgen/: __init__.py  array_service.py  image_service.py  kmeans_gen.py  logger.py
python/tests/: test.py
src/: index.html
src/app/: app.component.html  kmeans.worker.ts
src/app/models/: Centroid.ts  ImageDisplayInfo.ts  Kmeans.ts  Pixel.ts  ProgressUpdate.ts  Vector.ts
src/app/pipes/: time.pipe.ts
src/app/services/: canvas.service.ts  kmeans-image.service.ts  loading.service.ts
tests/: test.py
(+54 files in other folders)
