[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "KMeansMeshGen"
version = "0.1.0"
authors = [
  { name="Kenneth Mead", email="kennethmead784@gmail.com" },
]
description = "A Python project for generating meshes using K-Means algorithm"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Xerner/KMeansMeshGen"
